[project]
name = "x_4357_make_contract_validators_x"
version = "0.20.7"
description = "JSON schema validation toolkit."
authors = [ { name = "RRGM", email = "eye4357@outlook.com" } ]
license = { text = "MIT License (c) 2025 RRGM (Software Tech Lead of the Primus Pilus Night Watch AI Corporation)" }
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = ["jsonschema>=4.21.1,<5"]

[project.urls]
Homepage = "https://example.com/x_make_contract_validators_x"

[tool.hatch.build]
exclude = [".mypy_cache", ".ruff_cache", ".pytest_cache", "tests"]

[tool.hatch.build.targets.wheel]
packages = ["x_make_contract_validators_x"]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"
